# UNIX_labs

Al'Puchina/3lab/: Makefile  client.cpp  conf.h  functions.c  functions.h  server.cpp  settings.sh
Al'Puchina/4lab/: Makefile  client.c  del.x  server.cpp  settings.sh
DyadyaVova/: 1.txt  2.txt  3.txt  4.txt
DyadyaVova/1lab/: lib.cpp  main.cpp
DyadyaVova/2lab/: main.cpp  settings.sh
DyadyaVova/3lab/: Makefile  client.cpp  poly.cpp  poly.h  server.cpp  settings.sh
DyadyaVova/4lab/: Makefile  functions.h  main.cpp
VeseloePivo/3lab/: Makefile  conf.h  controller.cpp  main.cpp
dasha_sportik/2lab/: example.txt  main.cpp  settings.sh
dasha_sportik/4lab/: Makefile  main.cpp  settings.sh
donBASS/3lab/: Makefile  main.cpp  settings.sh
kirusha_proxy/2lab/: main.cpp  settings.sh
kirusha_proxy/3lab/: CMakeLists.txt  Makefile  creature.cpp  creature.h  main.cpp  settings.sh  swamp.cpp  swamp.h
kirusha_proxy/4lab/: main.cpp  settings.sh
mylabs/1lab/: lib.cpp  main.cpp  run_this_code_im_out.sh
mylabs/2lab/: main.cpp  reshala.cpp  settings.sh
mylabs/3lab/: Makefile  client.c  poly.cpp  server.cpp  settings.sh
mylabs/3lab/files/: client.c  del.x  (+2 more)
mylabs/4lab/: main.cpp
xunofobs/1lab/: main.cpp  readme.txt  settings.sh
xunofobs/2lab/: main.cpp  settings.sh
xunofobs/3lab/: CMakeLists.txt  Makefile  create.c  delete.c  functions.c  functions.h  main.cpp  myProject  pull.c  push.c  readme.txt  settings.sh  status.c
xunofobs/3lab/files/: CMakeLists.txt  functions.h  main.cpp
xunofobs/4lab/: Makefile  client.c  sender.x  server.cpp  settings.sh
